github host page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Plan B</title>
+    <title>Github Host Page</title>
 </head>
 <body>
-   <h1>Plan B</h1>  
+   <h1>Github Host Page</h1>  
 </body>
 </html>
