--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <form>
         <fieldset>
-            <legend>TEST FORM</legend>
+            <legend>FORM ASSIGNMENT</legend>
             <div class="box name">
                 <label for="email">Name</label>
                 <input type="text" id="name" value="">
